force-app/main/default/objects/Payment_Gateway_Notification__e/Payment_Gateway_Notification__e.object-meta.xml
<CustomObject>
    <label>Payment Gateway Notification</label>
    <pluralLabel>Payment Gateway Notifications</pluralLabel>
</CustomObject>