force-app/main/default/objects/Payment_Gateway_Notification__e/fields/Attendee_Data__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Data__c</fullName>
    <description>JSON string for ticket purchases</description>
    <label>Attendee Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>