force-app/main/default/objects/Payment_Gateway_Notification__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>values: milestone, ticket</description>
    <label>Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>