force-app/main/default/objects/Payment_Gateway_Notification__e/fields/Milestone_Id__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Id__c</fullName>
    <label>Milestone Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>