force-app/main/default/objects/Payment_Gateway_Notification__e/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>