force-app/main/default/objects/Payment_Gateway_Notification__e/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Status returned by the payment gateway (success, failed, cancelled)</description>
    <label>Payment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>